--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
+<head> 
+<script defer src="script.js"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Niki's MusikBattle 🎶</title>
@@ -48,7 +49,5 @@
   <p id="scoreboard"></p>
   <button id="nextRound" class="btn start">➡️ Næste runde</button>
 </div>
-
-<script src="script.js"></script>
 </body>
 </html>
