--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
 </head>
 
 <body>
-<!-- ⭐ START SKÆRM -->
-<div id="start-screen" class="screen active">
-  <h1 class="logo neon">🎶 Niki's MusikBattle 🎶</h1>
-  <p class="tagline">80'er & 90'er Music Quiz</p>
-  <button id="startGame" class="btn start">START 🎧</button>
-</div>
 
 <!-- ⭐ QUIZ SKÆRM -->
-<div id="quiz-screen" class="screen hidden">
+<div id="quiz-screen" class="screen">
   <header>
     <h2 id="roundInfo">Runde 1 — Gæt kunstner</h2>
     <button id="toggleSound" class="btn small">🔊</button>
